<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite1"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="244dp"
        android:layout_height="26dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="450dp"
        android:fontFamily="@font/croissant_one"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="300dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordlogin"
        app:layout_constraintVertical_bias="0.04000002"
        tools:layout_editor_absoluteX="28dp">

        <Button
            android:id="@+id/loginbtn"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/loginbtn"
            android:textColor="@color/colorWhite1"
            android:textSize="14sp"
            app:backgroundTint="@color/colorPrimary"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="385dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarlogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/no_accountbtn"
        android:layout_width="226dp"
        android:layout_height="29dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="14dp"
        android:text="@string/registered_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/progressBarlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>